modified:   css/style.css 	new file:   img/section-preview-1.jpg 	new file:   img/section-preview-2.jpg 	new file:   img/section-preview-3.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </section>
         <section class="sections">
             <ul class="section-list">
-                <li class="section-list__item" style="background-image: url(img/sections-preview.jpg);">
+                <li class="section-list__item" style="background-image: url(img/section-preview-1.jpg);">
                     <a class="container" href="">
                         <div class="section-list__title">Продажа</div>
                         <p class="section-list__text">Перейти к разделу</p>
@@ -159,19 +159,19 @@
                 </li>
                 <li class="section-list__item" style="background-image: url(img/sections-preview.jpg);">
                     <a class="container" href="">
-                        <div class="section-list__title">Продажа</div>
+                        <div class="section-list__title">Долгосрочно</div>
                         <p class="section-list__text">Перейти к разделу</p>
                     </a>
                 </li>
-                <li class="section-list__item" style="background-image: url(img/sections-preview.jpg);">
+                <li class="section-list__item" style="background-image: url(img/section-preview-2.jpg);">
                     <a class="container" href="">
-                        <div class="section-list__title">Продажа</div>
+                        <div class="section-list__title">Офисы</div>
                         <p class="section-list__text">Перейти к разделу</p>
                     </a>
                 </li>
-                <li class="section-list__item" style="background-image: url(img/sections-preview.jpg);">
+                <li class="section-list__item" style="background-image: url(img/section-preview-3.jpg);">
                     <a class="container" href="">
-                        <div class="section-list__title">Продажа</div>
+                        <div class="section-list__title">Паркинг</div>
                         <p class="section-list__text">Перейти к разделу</p>
                     </a>
                 </li>
